# mkdedede

./: Cargo.toml  README.md
examples/: c_example.c  dd_example.rs  ds_example.rs
include/: mkdedede.h
src/: double_dash.rs  ds.rs  ffi.rs  lib.rs
tests/: decode.rs  encode.rs
