[package]
name = "mkdedede"
license = "AGPL-3.0"
description = "Rust crate for decoding and encoding Mario Kart ghost data passwords (Double Dash!! and DS)"
keywords = ["decoder", "mario-kart"]
categories = ["encoding", "parsing"]
repository = "https://github.com/tpglitch/mkdedede"
version = "0.3.1"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
